# grpc-proto

./: .bazelrc  MODULE.bazel
.github/workflows/: testing.yml
bazel/: http_archives_extension.bzl  switched_rules_extension.bzl
